--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -3,9 +3,24 @@ header {
     grid-template-columns: 50% 1fr 1fr;
     align-items: center;
     padding: 25px;
-    background-color: rgb(0, 181, 181);
+    background-color: white;
+    border-bottom: 1px solid black;
+}
+
+header a {
+    text-decoration: none;
+}
+
+header a:visited {
+    color: black;
 }
 
 header h3 {
     font-size: 28px;
+}
+
+header button {
+    border-radius: 15px;
+    font-size: 20px;
+    padding: 10px;
 }
