--- a/src/style/Drinks.css
+++ b/src/style/Drinks.css
@@ -6,17 +6,28 @@
 #drink-container .drink {
     width: 45%;
     margin: 25px;
-    text-align: center;
+    padding: 15px; 
     display: grid;
-    grid-template-rows: 2em 1fr;
     grid-template-columns: repeat(2, 1fr);
-    border-radius: 25px;
     border: 1px solid black;
+    background-color: rgb(237, 237, 237);
 }
 
-#drink-container .drink h4 {
-    grid-column: span 2;
-    background-color: rgb(195, 195, 195);
-    margin: 0;
-    border-radius: 25px 25px 0px 0px;
+#drink-container .drink .actions-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+}
+
+#drink-container .drink .actions-container button {
+    height: 75%;
+    width: 75%;
+    background-color: rgb(53, 123, 224);
+    box-shadow: 6px 3px 13px 1px black;
+    font-size: 18px;
+}
+#drink-container .drink .actions-container input {
+    height: 75%;
+    width: 75%;
+    font-size: 18px;
 }
